# lib-common

./: .clangd  .gerrit-branch  .gitattributes  .gitignore  .tool-versions  .tool-versions-tpl.sh  CLAUDE.md  Cargo.toml  README-iop-yaml.adoc  README-python3.adoc  README-rust.adoc  README-waf.adoc  README.adoc  ZFile  arith-cmp.h  arith-endianess.h  arith-float.c  arith-int.c  arith-scan.c  arith-str.h  arith.h  asn1-helpers.in.c  asn1-macros.h  asn1-per-macros.h  asn1-per.c  asn1-per.h  asn1-writer.c  asn1-writer.h  asn1.c  asn1.h  azure-pipelines.yml  bit-buf.c  bit-buf.h  bit-stream.h  bit-wah.c  bit-wah.h  bit.h  conf-parser.l  conf.c  conf.h  (+258 more)
.cargo/: config.toml
.github/workflows/: tests.yml
Config/: _tokens.sh  asciidoc.conf  buildbot.supp  cflags.sh  head.css  headache.conf  mib.py
_/css/: site.css
_/js/: site.js
ast-grep/rule-tests/: qm-reserve-type-check.yml  t-scope-check.yml
ast-grep/rules/: qm-reserve-type-check.yml  t-scope-check.yml
bench/: .gitignore  benches-main.c  bithacks.c  container-bench.blk  container-bench.c  create-qpsstress-corpus.py  gcd-bench.c  gcd-bench.sh  iop-pack.c  iop-struct-for-each-bench.c  iprintf-speed.c  mem-bench.c  mem_stats.py  post_script.sh  qpsstress.blk  threaded-operations-bench.blk  thrjob.blk  wscript_build  ztst-qps-bitmap-bench.c
compat/: Block.h  stdatomic.h
docs/: antora.yml
examples/: .gitignore  ex-prometheus-client.c  wscript_build
examples/iop-tutorial/: ex-iop.c  exiop.iop  wscript_build
iop/: tstiop-plugin.c  tstiop.iop  tstiop2-plugin.c  tstiop2.iop  tstiop_backward_compat.iop  tstiop_backward_compat_deleted_struct_1.iop  tstiop_backward_compat_iface.iop  tstiop_backward_compat_iface_deleted_rpc.iop  tstiop_backward_compat_iface_deleted_rpc_ignored.iop  tstiop_backward_compat_iface_deleted_rpc_ignored_bin.iop  tstiop_backward_compat_iface_incompatible_rpc_ignored.iop  tstiop_backward_compat_iface_incompatible_rpc_ignored_binjson.iop  tstiop_backward_compat_incompatible_struct_2.iop  tstiop_backward_compat_mod_deleted_if.iop  tstiop_bpack_unregistered_class.iop  tstiop_dox.iop  tstiop_file_inclusion_class.json  tstiop_file_inclusion_first_field-exp.json  tstiop_file_inclusion_invalid-include-alone.json  tstiop_file_inclusion_invalid-include-empty.json  tstiop_file_inclusion_invalid-int.json  tstiop_file_inclusion_invalid-misplaced-include.json  tstiop_file_inclusion_invalid-unclosed-parenthesis.json  tstiop_file_inclusion_invalid-unclosed-quotes.json  tstiop_file_inclusion_recursion-exp.json  tstiop_file_inclusion_recursion.json  tstiop_file_inclusion_ref-exp.json  tstiop_file_inclusion_string-array.json  tstiop_file_inclusion_struct-exp.json  tstiop_inheritance_invalid1.json  tstiop_inheritance_invalid2.json  tstiop_inheritance_invalid2.xml  tstiop_inheritance_invalid3.xml  tstiop_inheritance_invalid4.xml  tstiop_inheritance_invalid7.xml  tstiop_inheritance_invalid8.json  tstiop_inheritance_invalid8.xml  tstiop_inheritance_invalid9.xml  tstiop_inheritance_valid5.json  tstiop_rpc.iop  (+1 more)
iop/json-includes/: MyClass1.json  MyReferencedStruct.json  MyStructC-1.json  MyStructJ.json  string2.txt
iop/json-includes-symlinks/: MyStructC-recur-3.json
iopc/: .gitignore  iopc-dso.c  iopc-iopsq.c  iopc-iopsq.h  iopc-lang-c.blk  iopc-lang-typescript.c  iopc-lex.l  iopc-parser.c  iopc-pretty.c  iopc-priv.h  iopc-typer.blk  iopc.c  iopc.fc  iopc.h  iopc.tokens  wscript_build  z-iopc.py  zchk.c
iopc/iopsq-tests/: enum.json  error-misc.json  struct.json
iopc/testsuite/: .gitignore  attrs_invalid_11.iop  attrs_invalid_12.iop  attrs_invalid_14.iop  attrs_invalid_15.iop  attrs_invalid_18.iop  attrs_invalid_2.iop  attrs_invalid_3.iop  attrs_invalid_5.iop  attrs_invalid_7.iop  attrs_invalid_8.iop  attrs_invalid_enum_alias3.iop  attrs_invalid_enumval.iop  attrs_invalid_min_1.iop  attrs_invalid_min_2.iop  attrs_multi_valid.iop  attrs_valid_v5.iop  check_name_field.iop  check_name_rpc.iop  circular_pkg_a.iop  enum4.iop  (+63 more)
iopy/: .gitignore  ZFile  iopy.pyx  iopy_cython_export_fix.h  iopy_rpc.c  iopy_rpc.h  libcommon_cython.h  libcommon_cython.pxc  version.h  wscript_build  z_compatibility.py  z_iopy.py  z_run_tests.sh  zchk-iopy-dso.c  zpycore
lib-common/: coding-rules-c.html  dev-c.html  index.html  philosophy.html  use-as-submodule.html
pxcc/: README.md  cython_export_fix.h  pxcc.c  pxcc.fc  zchk_cmod.h
rust/: coding-rules.md  wscript_build
rust/farchc/: .gitignore  Cargo.toml  build.rs  farchc.rs  wrapper.h  wscript_build
samples/: example1.latin1  example1.utf8  example1_zlib  example2.utf8  example3.windows-1256  simple.tpl  z-iop-for-each-field-paths.txt  z-iop-for-each-st-paths.txt  z-iop-for-each.json
scripts/: flex.sh  version-fake.sh  wscript
src/: arith.h  asn1-per.h  asn1.h  bit-buf.h  bit-stream.h  bit-wah.h  bit.h  container-dlist.h  container-htlist.h  container-qhash.h  container-qheap.h  container-qhugehash.h  container-qvector.h  container-rbtree.h  container-ring.h  container.h  core.h  datetime.h  el.h  farch.h  file-bin.h  file-log.h  file.h  hash.h  http.h  http2.h  iop-json.h  iop-openapi.h  iop-rpc.h  iop-snmp.h  iop-yaml.h  iop.h  linux-uapi-sctp.h  log-iop.h  log.h  net.h  parseopt.h  parsing-helpers.h  prometheus-client.h  qlzo.h  (+20 more)
test-data/: iop.wsdl
tests/: .gitignore  wscript_build  zchk-asn1-per.c  zchk-asn1-writer.c  zchk-bit-wah.c  zchk-bithacks.c  zchk-container.blk  zchk-core-bithacks.c  zchk-core-obj.c  zchk-core-rand.c  zchk-el.blk  zchk-farch.c  zchk-file-log.c  zchk-h2spec.blk  zchk-hash.c  zchk-hat.blk  zchk-hpack.c  zchk-http.c  zchk-http2.c  zchk-iop-core-obj.blk  zchk-iop-http.c  zchk-iop-openapi.c  zchk-iop-plugin.c  zchk-iop-ressources.c  zchk-iop-ressources.h  zchk-iop-rpc.c  zchk-iop-yaml.c  zchk-iop.blk  zchk-iop.c  zchk-iop.h  zchk-iprintf.c  zchk-log.blk  zchk-mem.c  zchk-module.c  zchk-net.blk  zchk-net.c  zchk-parseopt.c  zchk-prometheus.blk  zchk-qps-bitmap.c  zchk-snmp.c  (+18 more)
tools/: .gitignore  farchc.c
utils/: error-trapper.sh  ic-cert-default.pem  ic-key-default.pem
waftools/: backend.py  common.py
zpycore/: __init__.py  util.py  zunittest.py
(+737 files in other folders)
