###########################################################################
#                                                                         #
# Copyright 2025 INTERSEC SA                                              #
#                                                                         #
# Licensed under the Apache License, Version 2.0 (the "License");         #
# you may not use this file except in compliance with the License.        #
# You may obtain a copy of the License at                                 #
#                                                                         #
#     http://www.apache.org/licenses/LICENSE-2.0                          #
#                                                                         #
# Unless required by applicable law or agreed to in writing, software     #
# distributed under the License is distributed on an "AS IS" BASIS,       #
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.#
# See the License for the specific language governing permissions and     #
# limitations under the License.                                          #
#                                                                         #
###########################################################################

# {{{ General options

[workspace]
members = ["rust/*"]
resolver = "3"

[workspace.package]
edition = "2024"
publish = false

# }}}
# {{{ Profiles

# TODO: see https://nnethercote.github.io/perf-book/build-configuration.html

[profile.dev]
# Represents waf profile 'debug'.

[profile.default]
inherits = "dev"
opt-level = 3 # Same as 'release'

[profile.release]
codegen-units = 1

[profile.asan]
inherits = "dev"

[profile.tsan]
inherits = "dev"

[profile.mem-bench]
inherits = "dev"

[profile.coverage]
inherits = "dev"

[profile.fuzzing]
inherits = "default"

[profile.fuzzingcov]
inherits = "dev"

[profile.fuzzingdebug]
inherits = "dev"

# }}}
# {{{ Dependencies

[workspace.dependencies]
# Used by waf-cargo-build
bindgen = "0.72.0"
cc = "1.2.25"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Used by libcommon-minimal for modules
ctor = "0.4.2"

# Used by farchc
clap = { version = "4.5.39", features = ["derive"] }
rand = "0.9.1"

# }}}
