###########################################################################
#                                                                         #
# Copyright 2022 INTERSEC SA                                              #
#                                                                         #
# Licensed under the Apache License, Version 2.0 (the "License");         #
# you may not use this file except in compliance with the License.        #
# You may obtain a copy of the License at                                 #
#                                                                         #
#     http://www.apache.org/licenses/LICENSE-2.0                          #
#                                                                         #
# Unless required by applicable law or agreed to in writing, software     #
# distributed under the License is distributed on an "AS IS" BASIS,       #
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.#
# See the License for the specific language governing permissions and     #
# limitations under the License.                                          #
#                                                                         #
###########################################################################

# XXX: Read README-python3.adoc before adding new packages here.

[project]
name = "lib-common"
version = "0.0.0"
description = ""
authors = [{ name = "R&D", email = "rd@intersec.com" }]
requires-python = "~=3.9"

[dependency-groups]
dev = [
    # C extension writer for Python, used by IOPy
    "cython~=3.0.0",

    # process handling, used in tests
    "psutil~=5.9.5",
    "types-psutil~=5.9.5",

    # python linter
    "pylint==3.3.4",
    "ruff==0.11.9",

    # static typing for Python
    "mypy==1.14.1",
]
