###########################################################################
#                                                                         #
# Copyright 2025 INTERSEC SA                                              #
#                                                                         #
# Licensed under the Apache License, Version 2.0 (the "License");         #
# you may not use this file except in compliance with the License.        #
# You may obtain a copy of the License at                                 #
#                                                                         #
#     http://www.apache.org/licenses/LICENSE-2.0                          #
#                                                                         #
# Unless required by applicable law or agreed to in writing, software     #
# distributed under the License is distributed on an "AS IS" BASIS,       #
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.#
# See the License for the specific language governing permissions and     #
# limitations under the License.                                          #
#                                                                         #
###########################################################################

[package]
name = "farchc"
edition.workspace = true
publish.workspace = true

[[bin]]
name = "farchc"
path = "farchc.rs"

[build-dependencies]
waf-cargo-bind = { path = "../waf-cargo-bind" }
libcommon-core = { path = "../libcommon-core" }

[dependencies]
clap.workspace = true
rand.workspace = true

libcommon-core = { path = "../libcommon-core" }
